<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="60dp">

        <EditText
            android:id="@+id/Expression"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:gravity="end"
            android:inputType="textPersonName"

            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/expression"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold"
            tools:ignore="Autofill,LabelFor,DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/Result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:background="@color/white"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:gravity="end"
            android:inputType="textPersonName"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/result"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="Autofill,LabelFor,VisualLintTextFieldSize" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DisableBaselineAlignment">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/clear" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/seven" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/four" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/one" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/zero" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/backspace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/backspace" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/eight" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/five" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/two" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zerozero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/zerozero" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/percentage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/nine" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/six" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/three" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/dot" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/divide" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/star" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/plus" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/subtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/minus" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/equalto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/equal" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>